# Loader

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Loader.sln  README.md
cmake/: curl.cmake  imgui.cmake
includes/Discord/: RPC.hpp
includes/resources/: Loader.aps
resources/: Loader.aps
src/: Loader.vcxproj  Loader.vcxproj.filters  common.hpp  main.cpp  token.hpp
src/core/: globals.cpp  globals.hpp
src/gui/: gui.cpp  gui.hpp
src/gui/tabs/: changelog_tab.cpp  chat_tab.cpp  content_warning_tab.cpp  faq_tab.cpp  game_tab.cpp  home_tab.cpp  lethal_company_tab.cpp  repo_tab.cpp  settings_tab.cpp
src/security/: applicationchecker.cpp  applicationchecker.hpp  xorstr.h
src/util/: cpr_client.cpp  cpr_client.hpp  curl_util.cpp  curl_util.hpp  discord_util.cpp  discord_util.hpp  gui_util.hpp  injection.cpp  injection.hpp  logger.cpp  logger.hpp  message_system.cpp  message_system.hpp  util.hpp
src/widgets/: fa_solid_900.h  imgui_notify.h
